basic navigation and react menubar

--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,14 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>static-site-boilerplate index</title>
     <analytics></analytics>
   </head>
 
   <body class="index">
+    <menubar></menubar>
+
     <div class="images">
       <div class="image" id="bgPNG"></div>
       <div class="image" id="bgJPG"></div>
@@ -16,7 +19,10 @@
       <img src="images/image.svg" />
     </div>
 
-    <div>This is a landing page</div>
-    <a href="./pages/page.html">Go to an internal page</a>
+    <div class="demo">
+      <div><h1>This is a landing page</h1></div>
+      <a href="./pages/page.html">Go to an internal page</a>
+      <p>прикол</p>
+    </div>
   </body>
 </html>
