--- a/src/index.html
+++ b/src/index.html
@@ -10,19 +10,100 @@
   <body class="index">
     <menubar></menubar>
 
-    <div class="images">
-      <div class="image" id="bgPNG"></div>
-      <div class="image" id="bgJPG"></div>
-      <div class="image" id="bgSVG"></div>
-      <img src="images/image.png" />
-      <img src="images/image.jpg" />
-      <img src="images/image.svg" />
+    <div class="S_HomeScreen">
+      <img src="images/homescreen.png" alt="" />
+      <div class="W_HeadingContainer">
+        <div class="Q_HandleSquare lt"></div>
+        <div class="Q_HandleSquare rt"></div>
+        <div class="Q_HandleSquare rb"></div>
+        <div class="Q_HandleSquare lb"></div>
+        <h1>Интерактивный учебник <br />по веб-плакату</h1>
+        <div class="M_Buttons">
+          <a href="" class="A_Button">Перейти в учебник</a>
+          <a href="" class="A_Button secondary">О веб-плакате</a>
+        </div>
+      </div>
+    </div>
+    <div class="M_BigTextAbout">
+      <p class="subtitle light">Веб-плакат — это</p>
+      <h2 class="right-container">
+        Практический и творческий инструмент для дизайнеров, осваивающих
+        веб-вёрстку
+      </h2>
     </div>
 
-    <div class="demo">
-      <div><h1>This is a landing page</h1></div>
-      <a href="./pages/page.html">Go to an internal page</a>
-      <p>прикол</p>
+    <div class="W_AboutCards">
+      <div class="O_AboutCard">
+        <div class="M_HeadingPicture">
+          <div class="Q_SmallPatternImage"></div>
+          <h4>Одностраничный <br />сайт-высказывание</h4>
+        </div>
+        <p class="body-other">
+          Веб-плакат&nbsp;&mdash; это интерактивная страница в&nbsp;браузере,
+          где ты&nbsp;выражаешь свою идею через визуал, движение
+          и&nbsp;взаимодействие, а&nbsp;не&nbsp;продаёшь услугу или
+          рассказываешь длинную историю.
+        </p>
+      </div>
+      <div class="W_TwoCards right-container">
+        <div class="O_AboutCard">
+          <div class="M_HeadingPicture">
+            <div class="Q_SmallPatternImage"></div>
+            <h4>Научись дизайнить <br />через код</h4>
+          </div>
+          <p class="body-other">
+            Формат учит применять на&nbsp;практике HTML, CSS и&nbsp;JavaScript
+            для воплощения визуальных идей: работате с&nbsp;вёрсткой, анимациями
+            в&nbsp;вебе и интерактивностью без зависимости
+            от&nbsp;разработчиков.
+          </p>
+        </div>
+        <div class="O_AboutCard">
+          <div class="M_HeadingPicture">
+            <div class="Q_SmallPatternImage"></div>
+            <h4>Недушное программирование</h4>
+          </div>
+          <p class="body-other">
+            Обучайся через практику&nbsp;&mdash; создавай анимации, вёрстку
+            и&nbsp;интерактивность для своей идеи, а&nbsp;не&nbsp;повторяй
+            абстрактные примеры из&nbsp;учебников или упражнений
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <div class="S_ArticlesPreviewSection">
+      <div class="W_SectionAboutInfo">
+        <div class="O_AboutPartAction">
+          <div class="M_TimeChapter">
+            <div class="A_IconText">
+              <img
+                src="images/icons/Q_Time.svg"
+                alt="Q_Time"
+                width="24"
+                height="24"
+              />
+              <p class="subtitle light">2 часа 24 минуты</p>
+            </div>
+
+            <h2>Поэтапное руководство <br />по созданию веб-плаката</h2>
+          </div>
+          <a class="A_Button" href="index.html">Читать учебник</a>
+        </div>
+
+        <div class="O_AboutInfo">
+          <div class="M_Markers"></div>
+          <div class="A_CircleMarker">
+            <p class="circle">2</p>
+            <p>Части</p>
+          </div>
+          <div class="A_CircleMarker">
+            <p class="circle">32</p>
+            <p>Главы</p>
+          </div>
+        </div>
+      </div>
+      <div class="O_ArticlesSlider"></div>
     </div>
   </body>
 </html>
