--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8" />
@@ -92,14 +92,28 @@
         </div>
 
         <div class="O_AboutInfo">
-          <div class="M_Markers"></div>
-          <div class="A_CircleMarker">
-            <p class="circle">2</p>
-            <p>Части</p>
+          <div class="M_Markers">
+            <div class="A_CircleMarker">
+              <div class="Q_Circle">
+                <p class="subtitle">2</p>
+              </div>
+              <p>Части</p>
+            </div>
+            <div class="A_CircleMarker">
+              <div class="Q_Circle">
+                <p class="subtitle">32</p>
+              </div>
+              <p>Главы</p>
+            </div>
           </div>
-          <div class="A_CircleMarker">
-            <p class="circle">32</p>
-            <p>Главы</p>
+          <div class="A_CaptionText">
+            <div class="Q_HandleSquare rt"></div>
+            <div class="Q_HandleSquare rb"></div>
+            <p class="body-other">
+              Изучай веб-вёрстку своём темпе. Возвращайся к объяснениям сколько
+              угодно раз. Учебник проводит поэтапно от формирования концепции до
+              полной реализации и публикации веб-плаката
+            </p>
           </div>
         </div>
       </div>
