feat: airtable integration and posters catalog

--- a/src/posters.html
+++ b/src/posters.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -9,6 +9,7 @@
     <menubar></menubar>
     <div class="demo">
       <h1>Это страница плакатов</h1>
+      <div id="posters-catalog-root"></div>
     </div>
   </body>
 </html>
