posters styles and filters updated

--- a/src/posters.html
+++ b/src/posters.html
@@ -3,12 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Document</title>
+    <title>Веб-плакаты</title>
   </head>
   <body>
     <menubar></menubar>
-    <div class="demo">
-      <h1>Это страница плакатов</h1>
+    <div class="W_PostersPage">
+      <div class="M_HeadAboutPage">
+        <h1>Веб-плакаты</h2>
+        <div class="A_CaptionText">
+          <div class="Q_HandleSquare rt"></div>
+          <div class="Q_HandleSquare rb"></div>
+          <p class="body-other">Каталог избранных веб-плакатов Школы дизайна в период с 2019-2025</p>
+        </div>
+      </div>
       <div id="posters-catalog-root"></div>
     </div>
   </body>
