--- a/src/posters/poster.html
+++ b/src/posters/poster.html
@@ -3,19 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Плакат — Веб-плакаты</title>
+    <title>Веб-плакаты</title>
   </head>
   <body>
     <menubar></menubar>
 
-    <!-- Хлебные крошки (будут заполнены динамически) -->
+    <main id="poster-page-root"></main>
     <nav class="breadcrumbs" id="breadcrumbs">
       <a href="/">Главная</a> • <a href="/posters.html">Веб-плакаты</a> •
-      <span id="breadcrumb-type">Загрузка...</span>
+      <span id="breadcrumb-type">каво</span>
     </nav>
-
-    <main id="poster-page-root"></main>
-
     <div analytics></div>
   </body>
 </html>
