--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>static-site-boilerplate index</title>
+    <title>Web Poster | Интерактивный учебник по веб-плакату</title>
     <analytics></analytics>
   </head>
 
