styles for handbook and chapter

--- a/src/handbook.html
+++ b/src/handbook.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -7,15 +7,231 @@
   </head>
   <body>
     <menubar></menubar>
-    <div class="demo">
-      <h1>Руководство по созданию веб-плаката</h1>
-      <p>
-        Добро пожаловать в руководство по созданию веб-плаката. В этом
-        руководстве вы найдете пошаговые инструкции и советы по созданию
-        эффективных и привлекательных веб-плакатов.
-      </p>
 
-      <a href="handbook/part_1/chapter_1/introduction.html">Часть первая</a>
+    <div class="W_HandbookPageWrapper margin-container">
+      <!-- First screen -->
+      <div class="S_HandbookFirstScreen">
+        <div class="W_SectionAboutInfo">
+          <div class="M_HeadingContainer">
+            <div class="A_IconText">
+              <p class="subtitle light">2 части · 32 статьи</p>
+            </div>
+            <h1>Интерактивный <br />учебник по веб-плакату</h1>
+          </div>
+          <div class="A_CaptionText">
+            <div class="Q_HandleSquare rt"></div>
+            <div class="Q_HandleSquare rb"></div>
+            <p class="body-other">
+              Полное теоретическое и практическое <br />руководство по созданию
+              веб-плаката
+            </p>
+          </div>
+        </div>
+        <div class="Q_PageCover"></div>
+
+        <div class="C_Tabs">
+          <button class="A_Tab">
+            <p>Весь материал</p>
+            <p>По частям</p>
+            <div class="Q_HandleLine lt"></div>
+          </button>
+          <button class="A_Tab">
+            <p>Теория</p>
+            <p>15</p>
+            <div class="Q_HandleLine lt"></div>
+          </button>
+          <button class="A_Tab">
+            <p>Дизайн</p>
+            <p>10</p>
+            <div class="Q_HandleLine lt"></div>
+          </button>
+          <button class="A_Tab">
+            <p>Код и вёрстка</p>
+            <p>17</p>
+            <div class="Q_HandleLine lt"></div>
+            <div class="Q_HandleLine rt"></div>
+          </button>
+        </div>
+      </div>
+      <!-- Articles first -->
+      <div class="L_ArticlesPreviewSection">
+        <div class="S_SectionAbout">
+          <div class="W_SectionAboutInfo">
+            <div class="O_AboutPartAction">
+              <div class="M_HeadingContainer">
+                <div class="A_IconText">
+                  <img
+                    src="images/icons/Q_Time.svg"
+                    alt="Q_Time"
+                    width="24"
+                    height="24"
+                  />
+                  <p class="subtitle light">2 часа 24 минуты</p>
+                </div>
+
+                <h2>Введение в формат <br />веб-плаката</h2>
+              </div>
+            </div>
+
+            <div class="O_AboutInfo">
+              <div class="M_Markers">
+                <div class="A_CircleMarker">
+                  <div class="Q_Circle">
+                    <p class="subtitle">2</p>
+                  </div>
+                  <p>Части</p>
+                </div>
+                <div class="A_CircleMarker">
+                  <div class="Q_Circle">
+                    <p class="subtitle">32</p>
+                  </div>
+                  <p>Главы</p>
+                </div>
+              </div>
+              <div class="A_CaptionText">
+                <div class="Q_HandleSquare rt"></div>
+                <div class="Q_HandleSquare rb"></div>
+                <p class="body-other">
+                  Изучай веб-вёрстку своём темпе. Возвращайся к объяснениям
+                  сколько угодно раз. Учебник проводит поэтапно от формирования
+                  концепции до полной реализации и публикации веб-плаката
+                </p>
+              </div>
+            </div>
+          </div>
+          <a class="A_Button" href="index.html">Читать учебник</a>
+        </div>
+        <!-- Chapers -->
+        <div class="S_Chapters">
+          <div class="M_Columns">
+            <p class="body-other">Номер</p>
+            <p class="body-other">Глава</p>
+            <p class="body-other">Материал</p>
+            <p class="body-other">Категория</p>
+          </div>
+          <div class="C_Chapters">
+            <a
+              class="O_Chapter"
+              href="handbook/part_1/chapter_1/chapter_1.html"
+            >
+              <p class="body bold">01</p>
+              <p class="body bold">Что такое веб-плакат</p>
+              <p class="body bold">3 articles</p>
+              <span class="A_Tag">Теория</span>
+              <p class="body">Перейти</p>
+            </a>
+            <a class="O_Chapter" href="index.html">
+              <p class="body bold">02</p>
+              <p class="body bold">Выбор динамических и статичных модулей</p>
+              <p class="body bold">3 articles</p>
+              <span class="A_Tag">Теория</span>
+              <p class="body">Перейти</p>
+            </a>
+            <a class="O_Chapter" href="index.html">
+              <p class="body bold">03</p>
+              <p class="body bold">Выбор динамических и статичных модулей</p>
+              <p class="body bold">3 articles</p>
+              <span class="A_Tag">Теория</span>
+              <p class="body">Перейти</p>
+            </a>
+            <a class="O_Chapter" href="index.html">
+              <p class="body bold">04</p>
+              <p class="body bold">Выбор динамических и статичных модулей</p>
+              <p class="body bold">3 articles</p>
+              <span class="A_Tag">Теория</span>
+              <p class="body">Перейти</p>
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="L_ArticlesPreviewSection">
+        <div class="S_SectionAbout">
+          <div class="W_SectionAboutInfo">
+            <div class="O_AboutPartAction">
+              <div class="M_HeadingContainer">
+                <div class="A_IconText">
+                  <img
+                    src="images/icons/Q_Time.svg"
+                    alt="Q_Time"
+                    width="24"
+                    height="24"
+                  />
+                  <p class="subtitle light">2 часа 24 минуты</p>
+                </div>
+
+                <h2>Введение в формат <br />веб-плаката</h2>
+              </div>
+            </div>
+
+            <div class="O_AboutInfo">
+              <div class="M_Markers">
+                <div class="A_CircleMarker">
+                  <div class="Q_Circle">
+                    <p class="subtitle">2</p>
+                  </div>
+                  <p>Части</p>
+                </div>
+                <div class="A_CircleMarker">
+                  <div class="Q_Circle">
+                    <p class="subtitle">32</p>
+                  </div>
+                  <p>Главы</p>
+                </div>
+              </div>
+              <div class="A_CaptionText">
+                <div class="Q_HandleSquare rt"></div>
+                <div class="Q_HandleSquare rb"></div>
+                <p class="body-other">
+                  Изучай веб-вёрстку своём темпе. Возвращайся к объяснениям
+                  сколько угодно раз. Учебник проводит поэтапно от формирования
+                  концепции до полной реализации и публикации веб-плаката
+                </p>
+              </div>
+            </div>
+          </div>
+          <a class="A_Button" href="index.html">Читать учебник</a>
+        </div>
+        <!-- Chapers -->
+        <div class="S_Chapters">
+          <div class="M_Columns">
+            <p class="body-other">Номер</p>
+            <p class="body-other">Глава</p>
+            <p class="body-other">Материал</p>
+            <p class="body-other">Категория</p>
+          </div>
+          <div class="C_Chapters">
+            <a class="O_Chapter" href="index.html">
+              <p class="body bold">01</p>
+              <p class="body bold">Выбор динамических и статичных модулей</p>
+              <p class="body bold">3 articles</p>
+              <span class="A_Tag">Теория</span>
+              <p class="body">Перейти</p>
+            </a>
+            <a class="O_Chapter" href="index.html">
+              <p class="body bold">02</p>
+              <p class="body bold">Выбор динамических и статичных модулей</p>
+              <p class="body bold">3 articles</p>
+              <span class="A_Tag">Теория</span>
+              <p class="body">Перейти</p>
+            </a>
+            <a class="O_Chapter" href="index.html">
+              <p class="body bold">03</p>
+              <p class="body bold">Выбор динамических и статичных модулей</p>
+              <p class="body bold">3 articles</p>
+              <span class="A_Tag">Теория</span>
+              <p class="body">Перейти</p>
+            </a>
+            <a class="O_Chapter" href="index.html">
+              <p class="body bold">04</p>
+              <p class="body bold">Выбор динамических и статичных модулей</p>
+              <p class="body bold">3 articles</p>
+              <span class="A_Tag">Теория</span>
+              <p class="body">Перейти</p>
+            </a>
+          </div>
+        </div>
+      </div>
+      <!-- Articles Second -->
     </div>
   </body>
 </html>
