--- a/src/index.html
+++ b/src/index.html
@@ -72,52 +72,53 @@
       </div>
     </div>
 
-    <div class="S_ArticlesPreviewSection">
-      <div class="W_SectionAboutInfo">
-        <div class="O_AboutPartAction">
-          <div class="M_TimeChapter">
-            <div class="A_IconText">
-              <img
-                src="images/icons/Q_Time.svg"
-                alt="Q_Time"
-                width="24"
-                height="24"
-              />
-              <p class="subtitle light">2 часа 24 минуты</p>
-            </div>
-
-            <h2>Поэтапное руководство <br />по созданию веб-плаката</h2>
-          </div>
-          <a class="A_Button" href="index.html">Читать учебник</a>
-        </div>
-
-        <div class="O_AboutInfo">
-          <div class="M_Markers">
-            <div class="A_CircleMarker">
-              <div class="Q_Circle">
-                <p class="subtitle">2</p>
+    <div class="L_ArticlesPreviewSection">
+      <div class="S_SectionAbout">
+        <div class="W_SectionAboutInfo">
+          <div class="O_AboutPartAction">
+            <div class="M_TimeChapter">
+              <div class="A_IconText">
+                <img
+                  src="images/icons/Q_Time.svg"
+                  alt="Q_Time"
+                  width="24"
+                  height="24"
+                />
+                <p class="subtitle light">2 часа 24 минуты</p>
               </div>
-              <p>Части</p>
+
+              <h2>Поэтапное руководство <br />по созданию веб-плаката</h2>
             </div>
-            <div class="A_CircleMarker">
-              <div class="Q_Circle">
-                <p class="subtitle">32</p>
-              </div>
-              <p>Главы</p>
-            </div>
+            <a class="A_Button" href="index.html">Читать учебник</a>
           </div>
-          <div class="A_CaptionText">
-            <div class="Q_HandleSquare rt"></div>
-            <div class="Q_HandleSquare rb"></div>
-            <p class="body-other">
-              Изучай веб-вёрстку своём темпе. Возвращайся к объяснениям сколько
-              угодно раз. Учебник проводит поэтапно от формирования концепции до
-              полной реализации и публикации веб-плаката
-            </p>
+          <!-- caption chapter -->
+          <div class="O_AboutInfo">
+            <div class="M_Markers">
+              <div class="A_CircleMarker">
+                <div class="Q_Circle">
+                  <p class="subtitle">2</p>
+                </div>
+                <p>Части</p>
+              </div>
+              <div class="A_CircleMarker">
+                <div class="Q_Circle">
+                  <p class="subtitle">32</p>
+                </div>
+                <p>Главы</p>
+              </div>
+            </div>
+            <div class="A_CaptionText">
+              <div class="Q_HandleSquare rt"></div>
+              <div class="Q_HandleSquare rb"></div>
+              <p class="body-other">
+                Изучай веб-вёрстку своём темпе. Возвращайся к объяснениям
+                сколько угодно раз. Учебник проводит поэтапно от формирования
+                концепции до полной реализации и публикации веб-плаката
+              </p>
+            </div>
           </div>
         </div>
       </div>
-      <div class="O_ArticlesSlider"></div>
     </div>
   </body>
 </html>
