styles for navbar

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
         <div class="Q_HandleSquare lb"></div>
         <h1>Интерактивный учебник <br />по веб-плакату</h1>
         <div class="M_Buttons">
-          <a href="" class="A_Button">Перейти в учебник</a>
+          <a href="handbook.html" class="A_Button">Перейти в учебник</a>
           <a href="" class="A_Button secondary">О веб-плакате</a>
         </div>
       </div>
