--- a/src/posters/poster.html
+++ b/src/posters/poster.html
@@ -8,11 +8,8 @@
   <body>
     <menubar></menubar>
 
-    <main id="poster-page-root"></main>
-    <nav class="breadcrumbs" id="breadcrumbs">
-      <a href="/">Главная</a> • <a href="/posters.html">Веб-плакаты</a> •
-      <span id="breadcrumb-type">каво</span>
-    </nav>
+    <div class="L_Poster" id="poster-page-root"></div>
+
     <div analytics></div>
   </body>
 </html>
