--- a/src/posters.html
+++ b/src/posters.html
@@ -7,13 +7,15 @@
   </head>
   <body>
     <menubar></menubar>
-    <div class="W_PostersPage">
+    <div class="W_PostersPage margin-container">
       <div class="M_HeadAboutPage">
-        <h1>Веб-плакаты</h2>
+        <h1>Веб-плакаты</h1>
         <div class="A_CaptionText">
           <div class="Q_HandleSquare rt"></div>
           <div class="Q_HandleSquare rb"></div>
-          <p class="body-other">Каталог избранных веб-плакатов Школы дизайна в период с 2019-2025</p>
+          <p class="body-other">
+            Каталог избранных веб-плакатов Школы дизайна в период с 2019-2025
+          </p>
         </div>
       </div>
       <div id="posters-catalog-root"></div>
