styles for posters

--- a/src/posters.html
+++ b/src/posters.html
@@ -14,7 +14,7 @@
           <div class="Q_HandleSquare rt"></div>
           <div class="Q_HandleSquare rb"></div>
           <p class="body-other">
-            Каталог избранных веб-плакатов Школы дизайна в период с 2019-2025
+            Каталог избранных веб-плакатов Школы дизайна с&nbsp;2019-2025
           </p>
         </div>
       </div>
