gsap posers row

--- a/src/index.html
+++ b/src/index.html
@@ -24,28 +24,31 @@
         </div>
       </div>
     </div>
-    <div class="M_BigTextAbout">
-      <p class="subtitle light">Веб-плакат — это</p>
-      <h2 class="right-container">
-        Практический и творческий инструмент для дизайнеров, осваивающих
-        веб-вёрстку
-      </h2>
-    </div>
-
-    <div class="W_AboutCards">
-      <div class="O_AboutCard">
-        <div class="M_HeadingPicture">
-          <div class="Q_SmallPatternImage"></div>
-          <h4>Одностраничный <br />сайт-высказывание</h4>
-        </div>
-        <p class="body-other">
-          Веб-плакат&nbsp;&mdash; это интерактивная страница в&nbsp;браузере,
-          где ты&nbsp;выражаешь свою идею через визуал, движение
-          и&nbsp;взаимодействие, а&nbsp;не&nbsp;продаёшь услугу или
-          рассказываешь длинную историю.
-        </p>
+    <!-- TextAbout -->
+    <div class="W_HomePageWrapper margin-container">
+      <div class="M_BigTextAbout">
+        <p class="subtitle light">Веб-плакат — это</p>
+        <h2 class="right-container">
+          Практический и творческий инструмент для дизайнеров, осваивающих
+          веб-вёрстку
+        </h2>
       </div>
-      <div class="W_TwoCards right-container">
+
+      <div class="W_AboutCards">
+        <!-- first -->
+        <div class="O_AboutCard">
+          <div class="M_HeadingPicture">
+            <div class="Q_SmallPatternImage"></div>
+            <h4>Одностраничный <br />сайт-высказывание</h4>
+          </div>
+          <p class="body-other">
+            Веб-плакат&nbsp;&mdash; это интерактивная страница в&nbsp;браузере,
+            где ты&nbsp;выражаешь свою идею через визуал, движение
+            и&nbsp;взаимодействие, а&nbsp;не&nbsp;продаёшь услугу или
+            рассказываешь длинную историю.
+          </p>
+        </div>
+        <!-- second -->
         <div class="O_AboutCard">
           <div class="M_HeadingPicture">
             <div class="Q_SmallPatternImage"></div>
@@ -58,6 +61,7 @@
             от&nbsp;разработчиков.
           </p>
         </div>
+        <!-- third -->
         <div class="O_AboutCard">
           <div class="M_HeadingPicture">
             <div class="Q_SmallPatternImage"></div>
@@ -70,53 +74,164 @@
           </p>
         </div>
       </div>
-    </div>
-
-    <div class="L_ArticlesPreviewSection">
-      <div class="S_SectionAbout">
-        <div class="W_SectionAboutInfo">
-          <div class="O_AboutPartAction">
-            <div class="M_TimeChapter">
-              <div class="A_IconText">
-                <img
-                  src="images/icons/Q_Time.svg"
-                  alt="Q_Time"
-                  width="24"
-                  height="24"
-                />
-                <p class="subtitle light">2 часа 24 минуты</p>
-              </div>
-
-              <h2>Поэтапное руководство <br />по созданию веб-плаката</h2>
-            </div>
-            <a class="A_Button" href="index.html">Читать учебник</a>
-          </div>
-          <!-- caption chapter -->
-          <div class="O_AboutInfo">
-            <div class="M_Markers">
-              <div class="A_CircleMarker">
-                <div class="Q_Circle">
-                  <p class="subtitle">2</p>
-                </div>
-                <p>Части</p>
-              </div>
-              <div class="A_CircleMarker">
-                <div class="Q_Circle">
-                  <p class="subtitle">32</p>
-                </div>
-                <p>Главы</p>
-              </div>
-            </div>
-            <div class="A_CaptionText">
-              <div class="Q_HandleSquare rt"></div>
-              <div class="Q_HandleSquare rb"></div>
-              <p class="body-other">
-                Изучай веб-вёрстку своём темпе. Возвращайся к объяснениям
-                сколько угодно раз. Учебник проводит поэтапно от формирования
-                концепции до полной реализации и публикации веб-плаката
-              </p>
+      <!-- HseBlock -->
+      <div class="S_GalleryPosterBlock">
+        <div class="O_TitleSlider">
+          <div class="M_HeadingContainer">
+            <h2>Методика обучения прямиком из HSE ART AND DESIGN*</h2>
+            <div class="A_IconText">
+              <p class="subtitle light">7 лет практики · 300+ проектов</p>
             </div>
           </div>
+          <div class="fade-container"></div>
+          <div class="carousel-wrapper">
+            <div class="carousel-track">
+              <div class="carousel-item">
+                <img src="images/posters/poster01.png" alt="" />
+              </div>
+              <div class="carousel-item">
+                <img src="images/posters/poster02.png" alt="" />
+              </div>
+              <div class="carousel-item">
+                <img src="images/posters/poster03.png" alt="" />
+              </div>
+              <div class="carousel-item">
+                <img src="images/posters/poster04.png" alt="" />
+              </div>
+              <div class="carousel-item">
+                <img src="images/posters/poster05.png" alt="" />
+              </div>
+              <div class="carousel-item">
+                <img src="images/posters/poster06.png" alt="" />
+              </div>
+              <div class="carousel-item">
+                <img src="images/posters/poster07.png" alt="" />
+              </div>
+              <div class="carousel-item">
+                <img src="images/posters/poster08.png" alt="" />
+              </div>
+              <div class="carousel-item">
+                <img src="images/posters/poster09.png" alt="" />
+              </div>
+              <div class="carousel-item">
+                <img src="images/posters/poster10.png" alt="" />
+              </div>
+              <div class="carousel-item">
+                <img src="images/posters/poster11.png" alt="" />
+              </div>
+              <div class="carousel-item">
+                <img src="images/posters/poster12.png" alt="" />
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Handbook part -->
+      <div class="L_ArticlesPreviewSection">
+        <div class="S_SectionAbout">
+          <div class="W_SectionAboutInfo">
+            <div class="O_AboutPartAction">
+              <div class="M_HeadingContainer">
+                <div class="A_IconText">
+                  <img
+                    src="images/icons/Q_Time.svg"
+                    alt="Q_Time"
+                    width="24"
+                    height="24"
+                  />
+                  <p class="subtitle light">2 часа 24 минуты</p>
+                </div>
+
+                <h2>Поэтапное руководство по созданию веб-плаката</h2>
+              </div>
+            </div>
+
+            <div class="O_AboutInfo">
+              <div class="M_Markers">
+                <div class="A_CircleMarker">
+                  <div class="Q_Circle">
+                    <p class="subtitle">2</p>
+                  </div>
+                  <p>Части</p>
+                </div>
+                <div class="A_CircleMarker">
+                  <div class="Q_Circle">
+                    <p class="subtitle">32</p>
+                  </div>
+                  <p>Главы</p>
+                </div>
+              </div>
+              <div class="A_CaptionText">
+                <div class="Q_HandleSquare rt"></div>
+                <div class="Q_HandleSquare rb"></div>
+                <p class="body-other">
+                  Изучай веб-вёрстку своём темпе. Возвращайся к объяснениям
+                  сколько угодно раз. Учебник проводит поэтапно от формирования
+                  концепции до полной реализации и публикации веб-плаката
+                </p>
+              </div>
+            </div>
+          </div>
+          <a class="A_Button" href="index.html">Читать учебник</a>
+        </div>
+        <!-- Chapers -->
+        <div class="C_Articles main">
+          <!-- First Article -->
+          <a class="O_CardArticle" href="">
+            <div class="Q_ArticleImage"></div>
+            <div class="M_ArticleCardBio">
+              <p class="caption-caps">Теория · 5 минут</p>
+              <div class="M_AboutArticle">
+                <h4>Article name</h4>
+                <p class="body">
+                  Article bio about web-poster in a short way described with a
+                  few words
+                </p>
+              </div>
+            </div>
+          </a>
+          <!-- SecondArticle -->
+          <a class="O_CardArticle" href="">
+            <div class="Q_ArticleImage"></div>
+            <div class="M_ArticleCardBio">
+              <p class="caption-caps">Теория · 5 минут</p>
+              <div class="M_AboutArticle">
+                <h4>Article name</h4>
+                <p class="body">
+                  Article bio about web-poster in a short way described with a
+                  few words
+                </p>
+              </div>
+            </div>
+          </a>
+          <!-- Third Article -->
+          <a class="O_CardArticle" href="">
+            <div class="Q_ArticleImage"></div>
+            <div class="M_ArticleCardBio">
+              <p class="caption-caps">Теория · 5 минут</p>
+              <div class="M_AboutArticle">
+                <h4>Article name</h4>
+                <p class="body">
+                  Article bio about web-poster in a short way described with a
+                  few words
+                </p>
+              </div>
+            </div>
+          </a>
+          <!-- Fourth Article -->
+          <a class="O_CardArticle" href="">
+            <div class="Q_ArticleImage"></div>
+            <div class="M_ArticleCardBio">
+              <p class="caption-caps">Теория · 5 минут</p>
+              <div class="M_AboutArticle">
+                <h4>Article name</h4>
+                <p class="body">
+                  Article bio about web-poster in a short way described with a
+                  few words
+                </p>
+              </div>
+            </div>
+          </a>
         </div>
       </div>
     </div>
