--- a/src/index.html
+++ b/src/index.html
@@ -234,6 +234,18 @@
           </a>
         </div>
       </div>
+      <!-- Modules block -->
+      <div class="S_Modules">
+        <div class="M_HeadingContainer">
+          <h2>Не пиши весь код сам— воспользуйся готовым</h2>
+
+          <p class="subtitle light">
+            Библиотека готовых CSS и JavaScript решений для тебя и твоего
+            проекта. Анимации, эффекты скролла, drag-and-drop.
+          </p>
+        </div>
+        <a href="modules.html" class="A_Button">Перейти в модули</a>
+      </div>
     </div>
   </body>
 </html>
