--- a/src/index.html
+++ b/src/index.html
@@ -236,16 +236,75 @@
       </div>
       <!-- Modules block -->
       <div class="S_Modules">
-        <div class="M_HeadingContainer">
-          <h2>Не пиши весь код сам— воспользуйся готовым</h2>
+        <div class="O_ModulesBlock">
+          <div class="M_HeadingContainer">
+            <h2>Не пиши весь код сам — воспользуйся готовым</h2>
 
-          <p class="subtitle light">
-            Библиотека готовых CSS и JavaScript решений для тебя и твоего
-            проекта. Анимации, эффекты скролла, drag-and-drop.
-          </p>
+            <p class="subtitle light">
+              Библиотека готовых CSS и JavaScript решений для тебя и твоего
+              проекта. Анимации, эффекты скролла, drag-and-drop.
+            </p>
+          </div>
+
+          <div class="marquee">
+            <ul class="marquee-content">
+              <span class="A_Tag">keyframes</span>
+              <span class="A_Tag">filter</span>
+              <span class="A_Tag">transform</span>
+              <span class="A_Tag">rotate</span>
+              <span class="A_Tag">addEventListener</span>
+              <span class="A_Tag">timeout</span>
+              <span class="A_Tag">requestAnimationFrame</span>
+              <span class="A_Tag">classList</span>
+            </ul>
+          </div>
+          <div class="C_Modules">
+            <div class="O_ModuleCard">
+              <div class="Q_ModuleCardCover"></div>
+              <div class="M_AboutArticle">
+                <h4>Article name</h4>
+                <p class="body">
+                  Article bio about web-poster in a short way described with a
+                  few words
+                </p>
+              </div>
+            </div>
+            <div class="O_ModuleCard">
+              <div class="Q_ModuleCardCover"></div>
+              <div class="M_AboutArticle">
+                <h4>Article name</h4>
+                <p class="body">
+                  Article bio about web-poster in a short way described with a
+                  few words
+                </p>
+              </div>
+            </div>
+            <div class="O_ModuleCard">
+              <div class="Q_ModuleCardCover"></div>
+              <div class="M_AboutArticle">
+                <h4>Article name</h4>
+                <p class="body">
+                  Article bio about web-poster in a short way described with a
+                  few words
+                </p>
+              </div>
+            </div>
+            <div class="O_ModuleCard">
+              <div class="Q_ModuleCardCover"></div>
+              <div class="M_AboutArticle">
+                <h4>Article name</h4>
+                <p class="body">
+                  Article bio about web-poster in a short way described with a
+                  few words
+                </p>
+              </div>
+            </div>
+          </div>
+          <a href="modules.html" class="A_Button">Перейти в модули</a>
         </div>
-        <a href="modules.html" class="A_Button">Перейти в модули</a>
       </div>
+      <!-- LastBlock -->
+      <div class="S_ManyPosters"></div>
     </div>
   </body>
 </html>
